--- a/package.json
+++ b/package.json
@@ -1,28 +1,26 @@
 {
-  "name": "ata-test-server",
-  "version": "0.3.3",
-  "description": "A simple fake REST API server for testing and prototyping.",
+  "name": "ata-server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
   "scripts": {
-    "start": "node index"
+    "start": "SET NODE_ENV=development && nodemon --exec babel-node ./server.js",
+    "prod": "SET NODE_ENV=production && node ./server.js"
   },
+  "author": "SKK",
+  "license": "MIT",
   "dependencies": {
-    "clone": "^1.0.2",
-    "json-server": "^0.16.3",
-    "marked": "^2.0.3"
+    "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.5",
+    "express": "^4.17.1",
+    "express-validator": "^6.11.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.12.9"
   },
   "devDependencies": {
-    "Faker": "~0.5.11",
-    "husky": "^2.4.1",
-    "nodemon": "^1.19.1",
-    "pupa": "^2.0.0",
-    "rosie": "~1.6.0",
-    "showdown": "^1.9.0",
-    "supertest": "^3.1.0",
-    "tape": "^4.5.1",
-    "underscore": "^1.13.1"
-  },
-  "engines": {
-    "node": "10.x"
-  },
-  "license": "MIT"
+    "@babel/core": "^7.14.3",
+    "@babel/node": "^7.14.2",
+    "@babel/preset-env": "^7.14.2",
+    "nodemon": "^2.0.7"
+  }
 }
