--- a/package.json
+++ b/package.json
@@ -4,23 +4,27 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "SET NODE_ENV=development && nodemon --exec babel-node ./server.js",
-    "prod": "SET NODE_ENV=production && node ./server.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "devstart": "babel-node ./src/server.js",
+    "clean": "mkdir build",
+    "build-babel": "babel -d ./build ./src -s",
+    "build": "npm run clean && npm run build-babel",
+    "start": "npm run build && node ./build/server.js"
   },
   "author": "SKK",
   "license": "MIT",
   "dependencies": {
+    "babel-preset-env": "^1.7.0",
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.5",
+    "core-js": "^3.12.1",
     "express": "^4.17.1",
     "express-validator": "^6.11.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.9"
+    "mongoose": "^5.12.9",
+    "regenerator-runtime": "^0.13.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.3",
-    "@babel/node": "^7.14.2",
-    "@babel/preset-env": "^7.14.2",
-    "nodemon": "^2.0.7"
+    "babel-cli": "^6.26.0"
   }
 }
